--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -14,12 +14,25 @@
 }
 ul {
     li{
-        padding: 0 10px;
-        line-height: 40px;
-        background: #fff;
-        color: #333;
-        border-bottom: 1px solid #f5f5f5;
-        cursor: pointer;
-        border-radius: 0;
+        a{
+            display: block;
+            padding: 0 10px;
+            line-height: 40px;
+            background: #fff;
+            color: #333;
+            border-bottom: 1px solid #f5f5f5;
+            cursor: pointer;
+            border-radius: 0;
+            text-decoration: none;
+        }
+        a:hover, a:active{
+            background: #ccc;
+        }
     }
+}
+.view{
+    text-align: center;
+    width:100%;
+    height: 200px;
+    line-height: 200px;
 }
