--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -13,7 +13,13 @@
     text-align: center;
 }
 ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    justify-content: center;
     li{
+        flex:1;
+        text-align: center;
         a{
             display: block;
             padding: 0 10px;
@@ -25,14 +31,32 @@ ul {
             border-radius: 0;
             text-decoration: none;
         }
+
         a:hover, a:active{
             background: #ccc;
+        }
+        a.selected{
+            color:#fff;
+            background: blue;
         }
     }
 }
 .view{
-    text-align: center;
+
+}
+.view_list{
     width:100%;
-    height: 200px;
-    line-height: 200px;
+    .item{
+        line-height: 40px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 15px;
+        box-sizing: border-box;
+        border-bottom:1px solid #f5f5f5;
+        em{
+            font-size: 12px;
+            color:#555;
+            font-style: normal;
+        }
+    }
 }
